# nrf_extern

./: .gitignore  README.md
common/include/: nrfp_proto.h
docs/: architecture.md  nfc.md  protocol.md
firmware/: CMakeLists.txt  prj.conf  west.yml
firmware/child_image/: hci_ipc.conf
firmware/src/: main.c  spis_link.c  svc_nfc.c  tl_batch.c  tl_codec.c  tl_codec.h  tl_crc.c  tl_frame.c  tl_frame.h  tl_transport.c
host/: CMakeLists.txt
host-zynq/: README.md
host-zynq/docs/: pl_connection.md  pl_modules_fifo_crc.md
host-zynq/dts/: zynq-nrfp-overlay.dts  zynq-nrfp-overlay.dtsi
host-zynq/include/: nrfp_zynq_ioctl.h
host-zynq/kernel/: Makefile  nrfp_zynq_host.c
host-zynq/pl/verilog/: crc16_ccitt_pipe.v  crc16_ccitt_pipe_tb.v  spi_irq_bridge.v  spi_irq_bridge_tb.v  spi_rx_tx_fifo.v  spi_rx_tx_fifo_tb.v
host-zynq/user/: CMakeLists.txt  demo_ping.c
host/daemon/: CMakeLists.txt
host/daemon/src/: main.c
host/kernel/: Kconfig  Makefile  nrfp.h  nrfp_audio.c  nrfp_channels.c  nrfp_core.c  nrfp_dt_example.dtsi  nrfp_gpio_input.c  nrfp_nfc.c
host/lib/: CMakeLists.txt
host/lib/include/: nrfp_client.h
host/libnrfp/: CMakeLists.txt
host/libnrfp/include/: nrfp_client.h  nrfp_transport.h
host/libnrfp/src/: nrfp_client.c  nrfp_transport.c
host/libnrfp/tests/: nrfp_transport_test.c
host/tools/: CMakeLists.txt  nrfp_ping.c
